[project]
name = "skulk-test-harness"
version = "0.2.0"
description = "Agent-controlled end-to-end test and benchmark harness for Skulk clusters"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "pyyaml>=6.0.2",
  "rich>=14.2.0",
  "typer>=0.20.0",
  "websockets>=15.0.1",
]

[project.scripts]
skulk-harness = "skulk_test_harness.cli:app"

[dependency-groups]
dev = [
  "basedpyright>=1.36.0",
  "pytest>=8.4.0",
  "ruff>=0.14.0",
  "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I", "B", "N", "PIE", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
